add theme toggle

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,12 +15,12 @@ const { title, description } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-bgColor text-textColor">
+	<body class="bg-bgColor text-textColor dark">
 		<div class="absolute top-0 z-[-2] h-screen w-full gradient"></div>
 		<Header />
 		<slot />
